crates/ty_python_semantic/resources/mdtest/snapshots/union_call.md_-_Calling_a_union_of_f…_-_Try_to_cover_all_pos…_-_Attribute_access_on_…_(7bdb97302c27c412).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: union_call.md - Calling a union of function types - Try to cover all possible reasons - Attribute access on a typevar with multiple bounds
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/union_call.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVar, Self
 2 | 
 3 | class A:
 4 |     def foo(self, x: int) -> Self:
 5 |         return self
 6 | 
 7 | class B:
 8 |     def foo(self, x: str) -> Self:
 9 |         return self
10 | 
11 | T = TypeVar("T", A, B)
12 | 
13 | def _(x: T, y: int) -> T:
14 |     # error: [invalid-argument-type]
15 |     return x.foo(y)
```

# Diagnostics

```
error[invalid-argument-type]: Argument to bound method `B.foo` is incorrect
  --> src/mdtest_snippet.py:15:18
   |
15 |     return x.foo(y)
   |                  ^ Expected `str`, found `int`
   |
info: Method defined here
 --> src/mdtest_snippet.py:8:9
  |
8 |     def foo(self, x: str) -> Self:
  |         ^^^       ------ Parameter declared here
  |
info: Union variant `bound method T@_ when B.foo(x: str) -> T@_` is incompatible with this call site
info: Attempted to call union type `(bound method T@_ when A.foo(x: int) -> T@_) | (bound method T@_ when B.foo(x: str) -> T@_)`

```
